# web-terminal

./: Cargo.toml  README.md
src/: auth.rs  config.rs  main.rs  terminal.rs
static/: index.html  terminal.js
web/: package-lock.json  package.json  tsconfig.json
web/src/: terminal.ts
